--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,20 +13,21 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
   
-  # Steps represent a sequence of tasks that will be executed as part of the job
-  steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  - uses: actions/checkout@v2
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
   
-  # Runs the code in an Apache/PHP web server container
-  - name: Startup web server
-    run: docker run -v $(pwd):/var/www/html -dit --rm --name php php:apache
+    # Runs the code in an Apache/PHP web server container
+    - name: Startup web server
+      run: docker run -v $(pwd):/var/www/html -dit --rm --name php php:apache
     
-  # Run OWASP Scan and create Issue of results
-  - name: OWASP ZAP Baseline Scan
-    uses: zaproxy/action-baseline@v0.3.0
-    with:
-      # Target URL of PHP container
-      target: http://172.17.0.2
+    # Run OWASP Scan and create Issue of results
+    - name: OWASP ZAP Baseline Scan
+      uses: zaproxy/action-baseline@v0.3.0
+      with:
+        # Target URL of PHP container
+        target: http://172.17.0.2
